potluckr/gen/testParser.java
// Generated from C:/Users/mattd/IdeaProjects/potluckr\test.g4 by ANTLR 4.7

import com.mashape.unirest.http.HttpResponse;
import com.mashape.unirest.http.JsonNode;
import com.mashape.unirest.http.Unirest;
import java.util.HashMap;
import java.util.Map;
import java.util.Arrays;
import java.util.*;
import java.text.SimpleDateFormat;
import java.io.IOException;
import java.text.ParseException;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class testParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, ALLERGIES=6, DIETTYPE=7, MONTH=8, 
		CUISINES=9, CUISINE=10, TYPE=11, TYPES=12, DIET=13, ALLERGY=14, PRIVATE=15, 
		EVENT=16, NAME=17, PLAN=18, DESCRIPTION=19, LOCATION=20, FROM=21, TO=22, 
		DATE=23, RECIPE=24, ATTENDEE=25, UNAVAILABLE=26, AVAILABLE=27, INGREDIENTS=28, 
		DAY=29, TIME=30, YEAR=31, DESC=32, WS=33, SPACE=34;
	public static final int
		RULE_prog = 0, RULE_schedule = 1, RULE_event = 2, RULE_name = 3, RULE_date = 4, 
		RULE_time = 5, RULE_description = 6, RULE_location = 7, RULE_plan = 8, 
		RULE_attendee = 9, RULE_allergy = 10, RULE_diet = 11, RULE_pname = 12, 
		RULE_availability = 13, RULE_pdate = 14, RULE_recipe = 15, RULE_ingredients = 16, 
		RULE_cuisine = 17, RULE_type = 18;
	public static final String[] ruleNames = {
		"prog", "schedule", "event", "name", "date", "time", "description", "location", 
		"plan", "attendee", "allergy", "diet", "pname", "availability", "pdate", 
		"recipe", "ingredients", "cuisine", "type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "','", "'('", "')'", null, null, null, null, "'cuisine'", 
		"'type'", null, "'diet'", "'allergy'", "'private'", "'event'", "'name'", 
		"'plan'", "'description'", "'location'", "'from'", "'to'", "'date'", "'recipe'", 
		"'attendee'", "'unavailable'", "'available'", "'ingredients'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "ALLERGIES", "DIETTYPE", "MONTH", 
		"CUISINES", "CUISINE", "TYPE", "TYPES", "DIET", "ALLERGY", "PRIVATE", 
		"EVENT", "NAME", "PLAN", "DESCRIPTION", "LOCATION", "FROM", "TO", "DATE", 
		"RECIPE", "ATTENDEE", "UNAVAILABLE", "AVAILABLE", "INGREDIENTS", "DAY", 
		"TIME", "YEAR", "DESC", "WS", "SPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "test.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Map<String, String> recipeDict = new HashMap<>();
	Map<String, Integer> diets = new HashMap<>();
	int[] dietInt = new int[8];
	String[] dietStr = {"vegan", "ovo vegetarian", "lacto vegetarian",
	                    "vegetarian", "pescetarian", "paleo", "primal"};
	String[][] rescipeArr = new String[][]{{"Arugula Pumpkin Seed Pesto Sauerkraut Lasagna", "https://spoonacular.com/recipes/-8799", "https://spoonacular.com/recipeImages/8799-312x231.jpg"}, {"Asparagus", "https://spoonacular.com/recipes/-18502", "https://spoonacular.com/recipeImages/18502-312x231.jpg"}, {"Barley Risotto With Golden Beets & Greens", "https://spoonacular.com/recipes/-20433", "https://spoonacular.com/recipeImages/20433-312x231.jpg"}, {"Fretwell (italian Vegetable) Soup", "https://spoonacular.com/recipes/-20494", "https://spoonacular.com/recipeImages/20494-312x231.jpg"}, {"Pasta Pomodoro My Way'", "https://spoonacular.com/recipes/-26885", "https://spoonacular.com/recipeImages/26885-312x231.jpg"}};
	boolean inRecipe = false;

	Map<String, String> csvDict = new HashMap<>();
	SimpleDateFormat inputDate = new SimpleDateFormat("d MMMM yyyy");
	SimpleDateFormat outputDate = new SimpleDateFormat("dd/MM/yyyy");
	SimpleDateFormat inputTime = new SimpleDateFormat("H:m");
	SimpleDateFormat outputTime = new SimpleDateFormat("h:mm a");
	Date newDateObj;
	Date newTimeObj1;
	Date newTimeObj2;
	String newDate = "";
	String newTime = "";


	String[] monthStr = {"january", "february", "march", "april", "may", "june",
	                    "july", "august", "september", "october", "november",
	                    "december"};
	int[] date = new int[7];
	boolean available;
	int index = 0;


	public testParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public API myAPI = new API();
		public Output myOutput = new Output();
		public csvCleaner csvCleanerInit = new csvCleaner();
		public String str = "";
		public TerminalNode EOF() { return getToken(testParser.EOF, 0); }
		public List<ScheduleContext> schedule() {
			return getRuleContexts(ScheduleContext.class);
		}
		public ScheduleContext schedule(int i) {
			return getRuleContext(ScheduleContext.class,i);
		}
		public List<PlanContext> plan() {
			return getRuleContexts(PlanContext.class);
		}
		public PlanContext plan(int i) {
			return getRuleContext(PlanContext.class,i);
		}
		public List<RecipeContext> recipe() {
			return getRuleContexts(RecipeContext.class);
		}
		public RecipeContext recipe(int i) {
			return getRuleContext(RecipeContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(41);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PRIVATE:
				case EVENT:
					{
					setState(38);
					schedule();
					}
					break;
				case PLAN:
					{
					setState(39);
					plan();
					}
					break;
				case RECIPE:
					{
					setState(40);
					recipe();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRIVATE) | (1L << EVENT) | (1L << PLAN) | (1L << RECIPE))) != 0) );
			setState(45);
			match(EOF);

			    if(csvDict.containsKey("Subject") && csvDict.containsKey("Start Date")){
			        _localctx.csvCleanerInit.clean(csvDict);
			    }

			    recipeDict.put("diet", "vegan");
			    _localctx.myOutput.writeFile(rescipeArr, recipeDict, csvDict, monthStr);


			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScheduleContext extends ParserRuleContext {
		public TerminalNode EVENT() { return getToken(testParser.EVENT, 0); }
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public TerminalNode PRIVATE() { return getToken(testParser.PRIVATE, 0); }
		public ScheduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schedule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterSchedule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitSchedule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitSchedule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScheduleContext schedule() throws RecognitionException {
		ScheduleContext _localctx = new ScheduleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_schedule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRIVATE) {
				{
				setState(48);
				match(PRIVATE);
				}
			}

			setState(51);
			match(EVENT);
			setState(52);
			match(T__0);
			setState(53);
			event();
			setState(54);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<DateContext> date() {
			return getRuleContexts(DateContext.class);
		}
		public DateContext date(int i) {
			return getRuleContext(DateContext.class,i);
		}
		public List<TimeContext> time() {
			return getRuleContexts(TimeContext.class);
		}
		public TimeContext time(int i) {
			return getRuleContext(TimeContext.class,i);
		}
		public List<LocationContext> location() {
			return getRuleContexts(LocationContext.class);
		}
		public LocationContext location(int i) {
			return getRuleContext(LocationContext.class,i);
		}
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitEvent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitEvent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_event);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NAME) | (1L << DESCRIPTION) | (1L << LOCATION) | (1L << FROM) | (1L << DATE))) != 0)) {
				{
				setState(61);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NAME:
					{
					setState(56);
					name();
					}
					break;
				case DATE:
					{
					setState(57);
					date();
					}
					break;
				case FROM:
					{
					setState(58);
					time();
					}
					break;
				case LOCATION:
					{
					setState(59);
					location();
					}
					break;
				case DESCRIPTION:
					{
					setState(60);
					description();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public Token p;
		public TerminalNode NAME() { return getToken(testParser.NAME, 0); }
		public TerminalNode DESC() { return getToken(testParser.DESC, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(NAME);
			setState(67);
			match(T__0);
			setState(68);
			((NameContext)_localctx).p = match(DESC);
			setState(69);
			match(T__1);
			csvDict.put("Subject", (((NameContext)_localctx).p!=null?((NameContext)_localctx).p.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public String dateStr = "";;
		public Token k;
		public Token l;
		public Token m;
		public TerminalNode DATE() { return getToken(testParser.DATE, 0); }
		public TerminalNode MONTH() { return getToken(testParser.MONTH, 0); }
		public TerminalNode DAY() { return getToken(testParser.DAY, 0); }
		public TerminalNode YEAR() { return getToken(testParser.YEAR, 0); }
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(DATE);
			setState(73);
			match(T__0);
			setState(74);
			((DateContext)_localctx).k = match(MONTH);
			setState(75);
			((DateContext)_localctx).l = match(DAY);
			setState(76);
			((DateContext)_localctx).m = match(YEAR);
			setState(77);
			match(T__1);
			 try
			    {((DateContext)_localctx).dateStr =  (((DateContext)_localctx).l!=null?((DateContext)_localctx).l.getText():null) + " " +(((DateContext)_localctx).k!=null?((DateContext)_localctx).k.getText():null) + " " + (((DateContext)_localctx).m!=null?((DateContext)_localctx).m.getText():null);
			    newDateObj = inputDate.parse(_localctx.dateStr);
			    newDate += outputDate.format(newDateObj);
			    csvDict.put("Start Date", newDate);
			    csvDict.put("End Date", newDate);}
			    catch(ParseException e){
			         System.out.println("Exception Found!");
			         }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public Token g;
		public Token i;
		public TerminalNode FROM() { return getToken(testParser.FROM, 0); }
		public TerminalNode TO() { return getToken(testParser.TO, 0); }
		public List<TerminalNode> TIME() { return getTokens(testParser.TIME); }
		public TerminalNode TIME(int i) {
			return getToken(testParser.TIME, i);
		}
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitTime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(FROM);
			setState(81);
			match(T__0);
			setState(82);
			((TimeContext)_localctx).g = match(TIME);
			setState(83);
			match(TO);
			setState(84);
			((TimeContext)_localctx).i = match(TIME);
			setState(85);
			match(T__1);

			    try{
			    newTimeObj1 = inputTime.parse((((TimeContext)_localctx).g!=null?((TimeContext)_localctx).g.getText():null));
			    newTimeObj2 = inputTime.parse((((TimeContext)_localctx).i!=null?((TimeContext)_localctx).i.getText():null));
			    newTime = outputTime.format(newTimeObj1);
			    csvDict.put("Start Time", newTime);
			    newTime = outputTime.format(newTimeObj2);
			    csvDict.put("End Time", newTime);
			    }
			    catch(ParseException e){
			    System.out.println("Exception Found!");
			    }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public String descStr = "";
		public Token d;
		public Token e;
		public Token f;
		public TerminalNode DESCRIPTION() { return getToken(testParser.DESCRIPTION, 0); }
		public List<TerminalNode> DESC() { return getTokens(testParser.DESC); }
		public TerminalNode DESC(int i) {
			return getToken(testParser.DESC, i);
		}
		public List<TerminalNode> SPACE() { return getTokens(testParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(testParser.SPACE, i);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof testListener ) ((testListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}
